fix layout overlap

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ nav ul li:hover {
 #menu ul li {
   list-style-type: none;
   width: 100%;
-  height: 220px;
+  aspect-ratio: 4 / 2;
 }
 
 #menu ul li img {
